--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
    # Use with the CupertinoIcons class for iOS style icons.
    cupertino_icons: ^1.0.2
    flutter_bluetooth_serial: ^0.4.0
+   google_maps_flutter: ^2.1.1
+   location: ^4.3.0
+   telephony: ^0.1.4
+   geocoding: ^2.0.2
+   provider: ^6.0.2
+   flutter_ringtone_player: ^3.1.1
 
 dev_dependencies:
    flutter_test:
