So many stuff I forgot :joy:

--- a/mobile_app/.vscode/settings.json
+++ b/mobile_app/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
    "C_Cpp.intelliSenseEngineFallback": "Enabled",
-   "cSpell.words": ["polyline", "polylines"]
+   "cSpell.words": ["favourites", "polyline", "polylines"]
 }
