--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
    shared_preferences_android: ^2.0.11
    shared_preferences: ^2.0.13
    fluttercontactpicker: ^4.6.0
+   share_plus: ^3.1.0
+   motion_sensors: ^0.1.0
 
 dev_dependencies:
    flutter_test:
@@ -70,9 +72,8 @@ flutter:
    uses-material-design: true
 
    # To add assets to your application, add an assets section, like this:
-   # assets:
-   #   - images/a_dot_burr.jpeg
-   #   - images/a_dot_ham.jpeg
+   assets:
+      - assets/
 
    # An image asset can refer to one or more resolution-specific "variants", see
    # https://flutter.dev/assets-and-images/#resolution-aware.
