--- a/arduino/main/.vscode/settings.json
+++ b/arduino/main/.vscode/settings.json
@@ -3,5 +3,8 @@
       // "build": true,
       // ".vscode": true
    },
-   "C_Cpp.errorSquiggles": "Enabled"
+   "C_Cpp.errorSquiggles": "Enabled",
+   "files.associations": {
+      "*.ipp": "cpp"
+   }
 }
