--- a/arduino/main/.vscode/settings.json
+++ b/arduino/main/.vscode/settings.json
@@ -5,6 +5,8 @@
    },
    "C_Cpp.errorSquiggles": "Enabled",
    "files.associations": {
-      "*.ipp": "cpp"
+      "*.ipp": "cpp",
+      "bitset": "cpp",
+      "optional": "cpp"
    }
 }
