--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -51,17 +51,23 @@ dependencies:
    motion_sensors: ^0.1.0
    android_intent_plus: ^3.1.1
    flutter_tts: ^3.3.3
+   uni_links: ^0.5.1
 
 dev_dependencies:
    flutter_test:
       sdk: flutter
-
    # The "flutter_lints" package below contains a set of recommended lints to
    # encourage good coding practices. The lint set provided by the package is
    # activated in the `analysis_options.yaml` file located at the root of your
    # package. See that file for information about deactivating specific lint
    # rules and activating additional ones.
    flutter_lints: ^1.0.0
+   flutter_launcher_icons:
+
+flutter_icons:
+   android: true
+   ios: true
+   image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
