--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
    flutter_tts: ^3.3.3
    uni_links: ^0.5.1
    restart_app: ^1.1.0
+   flutter_background: ^1.1.0
 
 dev_dependencies:
    flutter_test:
