--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
    uni_links: ^0.5.1
    restart_app: ^1.1.0
    flutter_background: ^1.1.0
+   permission_handler: ^10.0.0
 
 dev_dependencies:
    flutter_test:
